--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -36,7 +36,7 @@ body {
 }
 .first-view {
   margin-top: 20px;
-  background-image: url(<%= asset_path 'images/patrick-tomasso-GXXYkSwndP4-unsplash.jpg' %>);
+  background-image:url("images/patrick-tomasso-GXXYkSwndP4-unsplash.jpg");
   background-size: cover;
   background-position: center;
   height: 750px;
@@ -236,7 +236,7 @@ body {
 	text-shadow: 2px 1px 3px #000;
 }
 .genre-img{
-  background-image: url(images/burger-3442227_1920.jpg);
+  background-image: url(/images/burger-3442227_1920.jpg);
   background-size: 200px;
   background-size: cover;
   background-position: center;
